# QuickCheck

./: CMakeLists.txt  README.md
src/: QuickCheck.cppm
